# abbott

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_and_test.yml
src/abbott/: __FRACTAL_MANIFEST__.json  __init__.py
src/abbott/dev/: task_list.py
src/abbott/dev/docs_info/: calculate_registration.md  calculate_registration_warpfield.md  convert_abbottlegacyh5_omezarr.md
src/abbott/fractal_tasks/: apply_channel_registration_elastix.py  apply_registration_elastix.py  apply_registration_elastix_per_ROI.py  apply_registration_warpfield.py  cellvoyager_to_ome_zarr_init_extend_multiplex.py  compute_channel_registration_elastix.py  compute_registration_elastix.py  compute_registration_elastix_per_ROI.py  compute_registration_warpfield.py  conversions.py  convert_abbottlegacyh5_to_omezarr_compute.py  convert_abbottlegacyh5_to_omezarr_init.py  seeded_segmentation.py  upsample_label_image.py
src/abbott/fractal_tasks/converter/: io_models.py  task_utils.py
src/abbott/registration/: fractal_helper_tasks.py  itk_elastix.py  itk_image.py  utils.py
src/abbott/segmentation/: io_models.py  segmentation_utils.py
tests/: conftest.py  test_conversion_omezarr.py  test_extend_multiplex_workflow.py  test_registration_workflow.py  test_segmentation_workflow.py  test_upsample_label_image.py
