# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
packages = ["src/abbott"]
include = [
    "src/abbott/registration/params_identity_*.txt",
]

[tool.hatch.metadata]
allow-direct-references = true # for warpfield build from github

# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "abbott"
dynamic = ["version"]
description = "3D Multiplexed Image Analysis Workflows"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Ruth Hornbachner", email = "ruth.hornbachner@uzh.ch" },
]

# Required Python version and dependencies
requires-python = ">=3.11"
dependencies = [
    "fractal-tasks-core == 1.5.3", 
    "fractal-task-tools == 0.0.12",
    "itk<5.4.4", 
    "itk-elastix", 
    "h5py", 
    "ngio",
    "scikit-image",
    "pyarrow ==20.0.0",
    "warpfield @ git+https://github.com/rhornb/warpfield.git@dev", # pin to cuda11
    "dask<=2025.9.1" #79
]

# Optional dependencies (e.g. for `pip install -e ".[dev]"`, see
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies)
[project.optional-dependencies]
dev = ["devtools", "hatch", "pytest", "requests", "jsonschema", "ruff", "pre-commit", "pooch", "pytest-cov"]

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src"]

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "google" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
    "D415", # First line should end with a period (remove to opt in)
    "C408", # Dictionary comprehension
    "B008", # Do not perform function calls in argument defaults
    "D102", # Missing docstring in public method
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 89
skip-magic-trailing-comma = false  # default is false